# risingwave-demo-deprecated

./: .gitignore  .gitmodules  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  build  prometheus.yaml  recwave-mock.sql  recwave-start.sql  run
ad-click/: README.md  ad_clicks.yaml  case-ad.sql  case-ad.yaml  clicks.sql  config.yaml  create_source.sql  docker-compose.yaml  docker-compose.yml
ad-ctr/: case-ad-impression.yaml  config.yaml  create_mv.sql  create_source.sql  ctr.sql  docker-compose.yaml  docker-compose.yml
ad-datagen/: ad_click.go  go.mod  go.sum  main.go  sink.go
cdn-metrics/: cdn.sql  create_mv.sql  create_source.sql  docker-compose.yml  query.sql
clickstream/: clickstream.sql  create_mv.sql  create_source.sql  docker-compose.yml
configs/: case-ad-click.sql  case-ad.sql  case-ad.yaml  case-ad_click.yaml  case-ad_impression.yaml  connector.toml  generator.toml  generator.yaml  json-nonested.json
datagen/: Dockerfile  go.mod  go.sum  load_gen.go  main.go
debezium-mysql/: create_source.sql  docker-compose.yml
delivery/: delivery.sql  docker-compose.yml
docker/: docker-compose.yml
docker-compose/: docker-compose.yaml
ecommerce/: ecommerce.sql
github-bot/: go.mod  go.sum  main.go
iceberg-sink/: README.md  create_mv.sql  create_sink.sql  create_source.sql  data_check  docker-compose.yml  iceberg-query.sql  mysql_prepare.sql
live-stream/: create_source.sql  create_source_pb.sql  docker-compose.yml  schema  stream.sql
livestream/: create_source.sql  docker-compose.yml  livestream.proto  schema
mysql-cdc/: create_mv.sql  create_source.sql  docker-compose.yml  mysql_prepare.sql  query.sql
mysql-sink/: create_mv.sql  create_source.sql  docker-compose.yml
postgres-cdc/: create_mv.sql  create_source.sql  data_check  docker-compose.yml  postgres_prepare.sql
postgres-cdc-sink/: create_mv.sql  docker-compose.yml  postgres_prepare.sql
postgres-sink/: docker-compose.yml
prometheus/: create_mv.sql  create_source.sql  docker-compose.yml  prometheus.sql  query.sql
recwave/: DockerFile  README.md  build-darwin.sh  build.sh  recwave-mock.sql  recwave-start.sql  recwave.sql  run
recwave/recommender/: Cargo.toml  actor.proto  build.rs  run  run-local
recwave/recommender/model/: __main__.py  model.proto  model.py  model_pb2.py  model_pb2_grpc.py  requirements.txt  sql.py
recwave/recommender/src/: kafka.rs  main.rs  model.rs  recwave.rs  serving.rs
schema-registry/: create_source.sql  datagen.py  docker-compose.yml  readme.md
schema_registry/: docker-compose.yml
src/: Cargo.toml  config.rs  generator.rs  kafka.rs  lib.rs  main.rs  (+1 more)
src/bench/: Cargo.toml
src/bench/src/kafka/: mod.rs  producer.rs
src/generator/: Cargo.toml
src/generator/src/: generate_state.rs  json_generator.rs  lib.rs
src/generator/src/json/: json_generator.rs  json_template.rs  mod.rs
(+87 files in other folders)
