[package]
name = "workload_generator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
chrono = "0.4"
humantime-serde = "1"
maplit = "1"
rand = "0.8"
rdkafka = { version = "0.28", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal", "fs"] }
