[package]
name = "recommender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
tonic = "0.7.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
prost = "0.10"

[build-dependencies]
tonic-build = "0.7.1"
