[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
rdkafka = { version = "0.28", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
anyhow = "1"
toml = "0.5"
data_generator = { path = "../generator" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal", "fs"] }
